print-pod-name/print-pod-name.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: print-pod-name
#   namespace: print-pod-name
# spec:
#   replicas: 3
#   selector:
#     matchLabels:
#       app: print-pod-name
#   template:
#     metadata:
#       labels:
#         app: print-pod-name
#     spec:
#       containers:
#       - name: print-pod-name
#       #  image: asia-southeast1-docker.pkg.dev/fit-hub-staging/test/print-pod-name:latest
#         image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
#         ports:
#         - containerPort: 8080
#       # imagePullSecrets:
#       # - name: artifact-registry

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: print-pod-name
#   namespace: print-pod-name
#   # annotations:
#   #   cloud.google.com/neg: '{"ingress": true, "exposed_ports": {"8080":{}}}'
# spec:
#   selector:
#     app: print-pod-name
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 8080
#   type: LoadBalancer

apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-v1
  namespace: print-pod-name
spec:
  replicas: 2
  selector:
    matchLabels:
      app: store
      version: v1
  template:
    metadata:
      labels:
        app: store
        version: v1
    spec:
      containers:
      - name: whereami
        image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.20
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: store-v1
  namespace: print-pod-name
spec:
  selector:
    app: store
    version: v1
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-v2
  namespace: print-pod-name
spec:
  replicas: 2
  selector:
    matchLabels:
      app: store
      version: v2
  template:
    metadata:
      labels:
        app: store
        version: v2
    spec:
      containers:
      - name: whereami
        image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.20
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: store-v2
  namespace: print-pod-name
spec:
  selector:
    app: store
    version: v2
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-german
  namespace: print-pod-name
spec:
  replicas: 2
  selector:
    matchLabels:
      app: store
      version: german
  template:
    metadata:
      labels:
        app: store
        version: german
    spec:
      containers:
      - name: whereami
        image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.20
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: store-german
  namespace: print-pod-name
spec:
  selector:
    app: store
    version: german
  ports:
  - port: 8080
    targetPort: 8080
