print-pod-name/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: test-api-gateway
  namespace: print-pod-name
  annotations:
    networking.gke.io/certmap: gke-stag-map
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  # - name: http
  #   protocol: HTTP
  #   port: 80
  #   allowedRoutes:
  #     kinds:
  #     - kind: HTTPRoute
  #     namespaces:
  #       from: Same
  - name: https
    protocol: HTTPS
    port: 443
    # allowedRoutes:
    #   kinds:
    #   - kind: HTTPRoute
    #   namespaces:
    #     from: All
    # tls:
    #   mode: Terminate
    #   options:
    #     networking.gke.io/pre-shared-certs: gke-stag-map
