print-pod-name/print-pod-external.yaml
# kind: HTTPRoute
# apiVersion: gateway.networking.k8s.io/v1beta1
# metadata:
#   name: test-api-gateway-external
#   namespace: print-pod-name
# spec:
#   parentRefs:
#   - kind: Gateway
#     name: test-api-gateway
#   hostnames:
#   - "test.svc.staging.fithubdev.com"
#   rules:
#   - backendRefs:
#     - name: print-pod-name
#       port: 80

kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: test-api-gateway-external
  namespace: print-pod-name
spec:
  parentRefs:
  - kind: Gateway
    name: test-api-gateway
  hostnames:
  - "test.svc.staging.fithubdev.com"
  rules:
  - backendRefs:
    - name: store-v1
      port: 8080
  - matches:
    - headers:
      - name: env
        value: canary
    backendRefs:
    - name: store-v2
      port: 8080
  - matches:
    - path:
        value: /de
    backendRefs:
    - name: store-german
      port: 8080
